ApexWorkbook/src/objects/AccountPartner__x.object
<CustomObject>
    <externalDataSource>Salesforcesimple</externalDataSource>
    <externalName>AccountPartner</externalName>
    <fields>
        <fullName>AccountFromId__c</fullName>
        <externalDeveloperName>AccountFromId</externalDeveloperName>
        <label>Account ID</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountToId__c</fullName>
        <externalDeveloperName>AccountToId</externalDeveloperName>
        <label>Account ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedById__c</fullName>
        <externalDeveloperName>CreatedById</externalDeveloperName>
        <label>Created By ID</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <externalDeveloperName>CreatedDate</externalDeveloperName>
        <label>Created Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>IsDeleted</externalDeveloperName>
        <label>Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsPrimary__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>IsPrimary</externalDeveloperName>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastModifiedById__c</fullName>
        <externalDeveloperName>LastModifiedById</externalDeveloperName>
        <label>Last Modified By ID</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModifiedDate__c</fullName>
        <externalDeveloperName>LastModifiedDate</externalDeveloperName>
        <label>Last Modified Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OpportunityId__c</fullName>
        <externalDeveloperName>OpportunityId</externalDeveloperName>
        <label>Opportunity ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReversePartnerId__c</fullName>
        <externalDeveloperName>ReversePartnerId</externalDeveloperName>
        <label>Reverse Partner/Relationship ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <externalDeveloperName>Role</externalDeveloperName>
        <label>Role</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SystemModstamp__c</fullName>
        <externalDeveloperName>SystemModstamp</externalDeveloperName>
        <label>System Modstamp</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <label>Account Partner/Relationship</label>
    <pluralLabel>Account Partner/Relationship</pluralLabel>
</CustomObject>